# serial-logger

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: args.rs  error.rs  loops.rs  main.rs  output.rs  serial.rs  time.rs  time_stamp.rs
