[package]
name = "serial-logger"
version = "1.1.1"
edition = "2021"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
rust-version = "1.71"
license = "MIT"
repository = "https://github.com/svmnotn/serial-logger/"
readme = "README.md"
description = "Logs a serial port to stdout or a file. Allows for writing to the serial port from stdin"

[dependencies]
serialport = "4.2.2"
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }
lexopt = "0.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
