[package]
name = "serial-logger"
version = "1.2.3"
edition = "2021"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/svmnotn/serial-logger/"
readme = "README.md"
description = "Logs a serial port to stdout or a file. Allows for writing to the serial port from stdin"

[dependencies]
serialport = "4.7.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
lexopt = "0.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
