[package]
name = "serial-logger"
version = "1.3.0"
edition = "2021"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/svmnotn/serial-logger/"
readme = "README.md"
description = "Logs a serial port to stdout or a file. Allows for writing to the serial port from stdin"

[dependencies]
serialport = "4.8.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
lexopt = "0.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
